--- a/Assets/Scripts/BattleUI/BattleUI.asmdef
+++ b/Assets/Scripts/BattleUI/BattleUI.asmdef
@@ -2,8 +2,8 @@
     "name": "BattleUI",
     "rootNamespace": "",
     "references": [
-        "Unity.TextMeshPro",
-        "Unity.TextMeshPro.Editor"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:6546d7765b4165b40850b3667f981c26"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
